--- a/public/report/SubReportVentas.jrxml
+++ b/public/report/SubReportVentas.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="SubReportVentas" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="0" uuid="a79d4afb-19d5-41e9-81e3-a24b10014a80">
-	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="fechaini" class="java.lang.String">
@@ -13,7 +13,8 @@
 		<defaultValueExpression><![CDATA["/usr/share/nginx/html/salesfly/public/report/"]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[select SUM(detSales.cantidad) AS totalUnidades, SUM(detPres.suppPri) as totalPrecioCompra, SUM(detSales.subTotal)as totalVentas, SUM(detSales.subTotal-detPres.suppPri) as totalGanacia from detSales left join detPres on detPres.id=detSales.detPre_id
+		<![CDATA[select ROUND(SUM(detSales.cantidad),0) AS totalUnidades, SUM(detPres.suppPri) as totalPrecioCompra, SUM(detSales.subTotal)as totalVentas, SUM(detSales.subTotal-detPres.suppPri) as totalGanacia,Round(SUM(detCash.montoMovimientoEfectivo),2) as totEfectivo,Round(SUM(detCash.montoMovimientoTarjeta),2) as totTarjeta, ROUND(SUM(detPres.suppPri*detSales.cantidad),2) as precioCompra,ROUND(SUM(detSales.subTotal-(detPres.suppPri*detSales.cantidad)),2)as ganacia,ROUND(SUM(detSales.cantidad),0)as totCant,SUM(detSales.subTotal) as totaSubtotal
+from detSales left join detPres on detPres.id=detSales.detPre_id
                      left join variants on variants.id=detPres.variant_id
                      left join products on products.id=variants.product_id
                      left join brands on products.brand_id=brands.id
@@ -32,6 +33,12 @@
 	<field name="totalPrecioCompra" class="java.math.BigDecimal"/>
 	<field name="totalVentas" class="java.math.BigDecimal"/>
 	<field name="totalGanacia" class="java.math.BigDecimal"/>
+	<field name="totEfectivo" class="java.math.BigDecimal"/>
+	<field name="totTarjeta" class="java.math.BigDecimal"/>
+	<field name="precioCompra" class="java.math.BigDecimal"/>
+	<field name="ganacia" class="java.math.BigDecimal"/>
+	<field name="totCant" class="java.math.BigDecimal"/>
+	<field name="totaSubtotal" class="java.math.BigDecimal"/>
 	<background>
 		<band/>
 	</background>
@@ -53,7 +60,7 @@
 		<band/>
 	</columnHeader>
 	<detail>
-		<band height="118">
+		<band height="164">
 			<subreport>
 				<reportElement x="0" y="24" width="555" height="91" uuid="eb7aedc5-7bca-44de-b96d-d0c87ac723ba"/>
 				<subreportParameter name="fechaini">
@@ -66,61 +73,103 @@
 				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "ReporteVentas.jasper"]]></subreportExpression>
 			</subreport>
 			<staticText>
-				<reportElement mode="Opaque" x="0" y="0" width="67" height="20" forecolor="#006699" backcolor="#D1B5B5" uuid="bf0fa06c-fac4-4d5c-a847-1efaa37142af"/>
-				<textElement textAlignment="Center">
-					<font size="12" isBold="true"/>
-				</textElement>
-				<text><![CDATA[T. Unid.]]></text>
-			</staticText>
-			<staticText>
-				<reportElement mode="Opaque" x="116" y="0" width="74" height="20" forecolor="#006699" backcolor="#D1B5B5" uuid="808219bc-9606-4c77-8b84-3cf75359410e"/>
+				<reportElement mode="Opaque" x="259" y="0" width="74" height="20" forecolor="#006699" backcolor="#D1B5B5" uuid="808219bc-9606-4c77-8b84-3cf75359410e"/>
 				<textElement textAlignment="Center">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[T. P.Com.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="258" y="0" width="66" height="20" forecolor="#006699" backcolor="#D1B5B5" uuid="2d476265-1e73-4c45-82cd-8ab0954bbbac"/>
+				<reportElement mode="Opaque" x="411" y="0" width="68" height="20" forecolor="#006699" backcolor="#D1B5B5" uuid="2d476265-1e73-4c45-82cd-8ab0954bbbac"/>
 				<textElement textAlignment="Center">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[T. Gan.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="394" y="0" width="71" height="20" forecolor="#006699" backcolor="#D1B5B5" uuid="5d3aed1d-66d9-40ba-a224-d6dc778ae2f8"/>
+				<reportElement mode="Opaque" x="113" y="0" width="71" height="20" forecolor="#006699" backcolor="#D1B5B5" uuid="5d3aed1d-66d9-40ba-a224-d6dc778ae2f8"/>
 				<textElement textAlignment="Center">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[T. Vent.]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true">
-				<reportElement mode="Opaque" x="67" y="0" width="49" height="20" backcolor="#A89C72" uuid="57a22ed0-eea2-4b58-98d5-ba0336ebd90f"/>
-				<textElement>
-					<font size="12"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{totalUnidades}]]></textFieldExpression>
-			</textField>
-			<textField isStretchWithOverflow="true">
-				<reportElement mode="Opaque" x="190" y="0" width="68" height="20" backcolor="#A89C72" uuid="71754212-99ab-4403-aac5-46bdcb269885"/>
+				<reportElement mode="Opaque" x="333" y="0" width="78" height="20" backcolor="#A89C72" uuid="71754212-99ab-4403-aac5-46bdcb269885"/>
 				<textElement>
 					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA["S/."+$F{totalPrecioCompra}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement mode="Opaque" x="324" y="0" width="70" height="20" backcolor="#A89C72" uuid="9dea812b-4394-4558-9867-1ad33f21a496"/>
+				<reportElement mode="Opaque" x="480" y="0" width="74" height="20" backcolor="#A89C72" uuid="9dea812b-4394-4558-9867-1ad33f21a496"/>
 				<textElement>
 					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA["S/."+$F{totalGanacia}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement mode="Opaque" x="467" y="0" width="88" height="20" backcolor="#A89C72" uuid="c38670ea-6840-43b9-8e25-938bee997585"/>
+				<reportElement mode="Opaque" x="184" y="0" width="75" height="20" backcolor="#A89C72" uuid="c38670ea-6840-43b9-8e25-938bee997585"/>
 				<textElement>
 					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA["S/."+$F{totalVentas}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement positionType="FixRelativeToBottom" x="271" y="115" width="62" height="20" uuid="67492086-507a-40de-8a19-db9dbd06ab57"/>
+				<textElement>
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Totales:]]></text>
+			</staticText>
+			<textField>
+				<reportElement positionType="FixRelativeToBottom" x="333" y="115" width="22" height="20" uuid="1d4fd591-df4c-4f93-bd4a-11c79e1d4abb"/>
+				<textElement verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{totCant}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement positionType="FixRelativeToBottom" x="460" y="115" width="49" height="20" forecolor="#FF0000" uuid="0c18aa83-557d-41c9-bc23-68838e747237"/>
+				<textElement verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA["S/."+$F{precioCompra}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement positionType="FixRelativeToBottom" x="509" y="115" width="45" height="20" forecolor="#00FF00" uuid="b622117b-2e57-42af-8cd8-0801035689fd"/>
+				<textElement verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA["S/."+$F{ganacia}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement positionType="FixRelativeToBottom" x="355" y="115" width="53" height="20" forecolor="#1F3ADC" uuid="0210037e-5d61-4258-8ed0-bfb7a936458c"/>
+				<textElement verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA["S/."+$F{totEfectivo}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement positionType="FixRelativeToBottom" x="409" y="115" width="51" height="20" forecolor="#490099" uuid="cefbb924-0d6c-486b-8398-23e0eaa0b052"/>
+				<textElement verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA["S/."+$F{totTarjeta}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true">
+				<reportElement mode="Opaque" x="55" y="0" width="58" height="20" backcolor="#A89C72" uuid="65303863-fb7f-4d1b-baeb-eef6ecc59495"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{totalUnidades}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement mode="Opaque" x="0" y="0" width="55" height="20" forecolor="#006699" backcolor="#D1B5B5" uuid="45f71be0-0acb-4855-99a8-059f2b3c1d35"/>
+				<textElement textAlignment="Center">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[T. Uni.]]></text>
+			</staticText>
 		</band>
 	</detail>
 	<columnFooter>
