--- a/public/report/SubReportVentas2.jrxml
+++ b/public/report/SubReportVentas2.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="SubReportVentas" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="0" uuid="a79d4afb-19d5-41e9-81e3-a24b10014a80">
-	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="fechaini" class="java.lang.String">
@@ -19,7 +19,7 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[select SUM(detSeparateSales.cantidad) AS totalUnidades, ROUND(SUM(detPres.suppPri*detSeparateSales.cantidad),2) as totalPrecioCompra, ROUND(SUM(detSeparateSales.subTotal),2)as totalVentas, ROUND(SUM(detSeparateSales.subTotal-(detPres.suppPri*detSeparateSales.cantidad)),2) as totalGanacia  from detSeparateSales
+		<![CDATA[select ROUND(SUM(detSeparateSales.cantidad),0) AS totalUnidades, ROUND(SUM(detPres.suppPri*detSeparateSales.cantidad),2) as totalPrecioCompra, ROUND(SUM(detSeparateSales.subTotal),2)as totalVentas, ROUND(SUM(detSeparateSales.subTotal-(detPres.suppPri*detSeparateSales.cantidad)),2) as totalGanacia,ROUND(SUM(salePayments.Acuenta),2) as totAcuenta,ROUND(SUM(salePayments.Saldo),2) AS totoSaldo from detSeparateSales
                      left join detPres on detPres.id=detSeparateSales.detPre_id
                      left join variants on variants.id=detPres.variant_id
                      left join products on products.id=variants.product_id
@@ -38,6 +38,8 @@
 	<field name="totalPrecioCompra" class="java.math.BigDecimal"/>
 	<field name="totalVentas" class="java.math.BigDecimal"/>
 	<field name="totalGanacia" class="java.math.BigDecimal"/>
+	<field name="totAcuenta" class="java.math.BigDecimal"/>
+	<field name="totoSaldo" class="java.math.BigDecimal"/>
 	<background>
 		<band/>
 	</background>
@@ -48,7 +50,7 @@
 				<textElement>
 					<font size="32"/>
 				</textElement>
-				<text><![CDATA[REPORTE VENTAS]]></text>
+				<text><![CDATA[REPORTE SEPARADOS/PEDIDOS]]></text>
 			</staticText>
 		</band>
 	</title>
@@ -59,7 +61,7 @@
 		<band/>
 	</columnHeader>
 	<detail>
-		<band height="111">
+		<band height="134">
 			<staticText>
 				<reportElement mode="Opaque" x="0" y="0" width="67" height="20" forecolor="#006699" backcolor="#D1B5B5" uuid="bf0fa06c-fac4-4d5c-a847-1efaa37142af"/>
 				<textElement textAlignment="Center">
@@ -68,21 +70,21 @@
 				<text><![CDATA[T. Unid.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="116" y="0" width="74" height="20" forecolor="#006699" backcolor="#D1B5B5" uuid="808219bc-9606-4c77-8b84-3cf75359410e"/>
+				<reportElement mode="Opaque" x="277" y="0" width="74" height="20" forecolor="#006699" backcolor="#D1B5B5" uuid="808219bc-9606-4c77-8b84-3cf75359410e"/>
 				<textElement textAlignment="Center">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[T. P.Com.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="258" y="0" width="66" height="20" forecolor="#006699" backcolor="#D1B5B5" uuid="2d476265-1e73-4c45-82cd-8ab0954bbbac"/>
+				<reportElement mode="Opaque" x="419" y="0" width="66" height="20" forecolor="#006699" backcolor="#D1B5B5" uuid="2d476265-1e73-4c45-82cd-8ab0954bbbac"/>
 				<textElement textAlignment="Center">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[T. Gan.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="395" y="0" width="71" height="20" forecolor="#006699" backcolor="#D1B5B5" uuid="5d3aed1d-66d9-40ba-a224-d6dc778ae2f8"/>
+				<reportElement mode="Opaque" x="116" y="0" width="71" height="20" forecolor="#006699" backcolor="#D1B5B5" uuid="5d3aed1d-66d9-40ba-a224-d6dc778ae2f8"/>
 				<textElement textAlignment="Center">
 					<font size="12" isBold="true"/>
 				</textElement>
@@ -96,21 +98,21 @@
 				<textFieldExpression><![CDATA[$F{totalUnidades}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement mode="Opaque" x="190" y="0" width="68" height="20" backcolor="#A89C72" uuid="71754212-99ab-4403-aac5-46bdcb269885"/>
+				<reportElement mode="Opaque" x="351" y="0" width="68" height="20" backcolor="#A89C72" uuid="71754212-99ab-4403-aac5-46bdcb269885"/>
 				<textElement>
 					<font size="11"/>
 				</textElement>
 				<textFieldExpression><![CDATA["S/."+$F{totalPrecioCompra}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement mode="Opaque" x="324" y="0" width="70" height="20" backcolor="#A89C72" uuid="9dea812b-4394-4558-9867-1ad33f21a496"/>
+				<reportElement mode="Opaque" x="485" y="0" width="70" height="20" backcolor="#A89C72" uuid="9dea812b-4394-4558-9867-1ad33f21a496"/>
 				<textElement>
 					<font size="11"/>
 				</textElement>
 				<textFieldExpression><![CDATA["S/."+$F{totalGanacia}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement mode="Opaque" x="467" y="0" width="88" height="20" backcolor="#A89C72" uuid="c38670ea-6840-43b9-8e25-938bee997585"/>
+				<reportElement mode="Opaque" x="188" y="0" width="88" height="20" backcolor="#A89C72" uuid="c38670ea-6840-43b9-8e25-938bee997585"/>
 				<textElement>
 					<font size="11"/>
 				</textElement>
@@ -133,6 +135,48 @@
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "ReporteVentas2.jasper"]]></subreportExpression>
 			</subreport>
+			<textField>
+				<reportElement positionType="FixRelativeToBottom" x="383" y="108" width="25" height="20" uuid="9ddb159e-9329-4c29-9bf2-d404670c5ccd"/>
+				<textElement verticalAlignment="Middle">
+					<font size="7"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{totalUnidades}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement positionType="FixRelativeToBottom" x="412" y="108" width="50" height="20" forecolor="#0000FF" uuid="3bd0ebfa-0725-4d5f-a8c5-d376455034a1"/>
+				<textElement verticalAlignment="Middle">
+					<font size="7"/>
+				</textElement>
+				<textFieldExpression><![CDATA["S/."+$F{totAcuenta}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement positionType="FixRelativeToBottom" x="462" y="108" width="33" height="20" forecolor="#FF0000" uuid="3627c95f-f6f8-49e7-a85a-c44456829be1"/>
+				<textElement verticalAlignment="Middle">
+					<font size="7"/>
+				</textElement>
+				<textFieldExpression><![CDATA["S/."+$F{totoSaldo}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement positionType="FixRelativeToBottom" x="495" y="108" width="45" height="20" forecolor="#C434BE" uuid="61ccc21e-4910-44e1-b389-a31a4a4ef624"/>
+				<textElement verticalAlignment="Middle">
+					<font size="7"/>
+				</textElement>
+				<textFieldExpression><![CDATA["S/."+$F{totalPrecioCompra}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement positionType="FixRelativeToBottom" x="537" y="108" width="37" height="20" forecolor="#00FF00" uuid="7c2cb559-2612-4e73-bcb2-2867648ec4b3"/>
+				<textElement verticalAlignment="Middle">
+					<font size="7"/>
+				</textElement>
+				<textFieldExpression><![CDATA["S/."+$F{totalGanacia}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement positionType="FixRelativeToBottom" x="339" y="108" width="44" height="20" uuid="62dae030-8014-40fa-9c6e-d48757a79a84"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Total:]]></text>
+			</staticText>
 		</band>
 	</detail>
 	<columnFooter>
