--- a/public/report/CardexProductRangoF.jrxml
+++ b/public/report/CardexProductRangoF.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="cardexTop10RangoFechas" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="6a11dfed-0bdc-4451-b9ca-f2f005731d86">
 	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="0"/>
+	<property name="ireport.x" value="235"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="fechaini" class="java.lang.String"/>
 	<parameter name="fechafin" class="java.lang.String"/>
@@ -17,7 +17,7 @@ inner join products on products.id=variants.product_id
 inner join headInputStocks on headInputStocks.id=inputStocks.headInputStock_id
 inner join warehouses on warehouses.id=headInputStocks.warehouses_id
 inner join stores on stores.id=warehouses.store_id
-where products.id=$P{productId} and headInputStocks.tipo=$P{tipo} and stores.id=$P{tienda} and inputStocks.created_at between $P{fechaini} and $P{fechafin} group by inputStocks.id order by cantida desc ]]>
+where products.id=$P{productId} and headInputStocks.tipo=$P{tipo} and stores.id=$P{tienda} and inputStocks.created_at between $P{fechaini} and $P{fechafin} group by inputStocks.id order by cantida desc]]>
 	</queryString>
 	<field name="codigo" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
@@ -41,11 +41,11 @@ where products.id=$P{productId} and headInputStocks.tipo=$P{tipo} and stores.id=
 			<frame>
 				<reportElement mode="Opaque" x="-20" y="-20" width="595" height="92" backcolor="#006699" uuid="719fc3ed-2e42-43e9-89ca-811efbb8fade"/>
 				<staticText>
-					<reportElement x="20" y="20" width="434" height="43" forecolor="#FFFFFF" uuid="7bf422c2-5fab-495c-bc52-60e68ed2f266"/>
+					<reportElement x="20" y="20" width="555" height="43" forecolor="#FFFFFF" uuid="7bf422c2-5fab-495c-bc52-60e68ed2f266"/>
 					<textElement>
-						<font size="34" isBold="true"/>
+						<font size="25" isBold="true"/>
 					</textElement>
-					<text><![CDATA[Top 10 Mas Vendidos]]></text>
+					<text><![CDATA[Movimientos de almacen por producto]]></text>
 				</staticText>
 			</frame>
 		</band>
