--- a/public/report/SubreportMovimientos1.jrxml
+++ b/public/report/SubreportMovimientos1.jrxml
@@ -6,11 +6,8 @@
 	<parameter name="mov_id" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
-	<parameter name="tipo" class="java.lang.String">
-		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
-	</parameter>
 	<queryString>
-		<![CDATA[select inputStocks.*,variants.codigo from inputStocks inner join variants on variants.id=inputStocks.variant_id inner join headInputStocks on headInputStocks.id=inputStocks.headInputStock_id where SUBSTRING(headInputStocks.fecha,1,10)=$P{mov_id} and headInputStocks.tipo=$P{tipo};]]>
+		<![CDATA[select inputStocks.*,variants.codigo from inputStocks inner join variants on variants.id=inputStocks.variant_id inner join headInputStocks on headInputStocks.id=inputStocks.headInputStock_id where SUBSTRING(headInputStocks.fecha,1,10)=$P{mov_id};]]>
 	</queryString>
 	<field name="id" class="java.lang.Long">
 		<fieldDescription><![CDATA[]]></fieldDescription>
