--- a/public/report/ReporteCajas.jrxml
+++ b/public/report/ReporteCajas.jrxml
@@ -52,13 +52,6 @@
 				</textElement>
 				<text><![CDATA[Total Ingresos:]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="168" y="13" width="77" height="20" forecolor="#0000FF" uuid="e5118766-866b-4e94-804b-c9889d47864e"/>
-				<textElement>
-					<font size="12" isBold="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA["s/."+$F{totIngresos}]]></textFieldExpression>
-			</textField>
 			<staticText>
 				<reportElement x="289" y="13" width="128" height="20" uuid="bd542545-26f9-47af-aa33-6cffc6e72be9"/>
 				<textElement>
@@ -80,13 +73,6 @@
 				</textElement>
 				<text><![CDATA[Total Monto Bruto:]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="168" y="44" width="77" height="20" forecolor="#0000FF" uuid="23e1b022-b089-42fe-b5b6-0464da99f94a"/>
-				<textElement>
-					<font size="12" isBold="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA["s/."+$F{totMontoBruto}]]></textFieldExpression>
-			</textField>
 			<staticText>
 				<reportElement x="289" y="44" width="128" height="20" uuid="2d9e5e9f-bf8e-4ac5-8794-4597b8b5b216"/>
 				<textElement>
@@ -171,6 +157,14 @@
 			<line>
 				<reportElement positionType="FixRelativeToBottom" x="136" y="193" width="417" height="1" uuid="524b186f-3dd4-475a-b300-c49c273995ab"/>
 			</line>
+			<textField>
+				<reportElement x="168" y="44" width="100" height="20" uuid="ed14dbc1-10a9-4ac2-baf4-96f535c13a03"/>
+				<textFieldExpression><![CDATA[$F{totMontoBruto}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="168" y="13" width="100" height="20" uuid="ccc2debf-bac9-4e72-95b2-a84550533393"/>
+				<textFieldExpression><![CDATA[$F{totIngresos}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<columnFooter>
