--- a/public/report/ReporteCajas.jrxml
+++ b/public/report/ReporteCajas.jrxml
@@ -169,7 +169,7 @@
 				<textElement>
 					<font size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA["S/."+$F{totIngresos}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{totIngresos}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
