--- a/public/report/ReporteCajas.jrxml
+++ b/public/report/ReporteCajas.jrxml
@@ -158,18 +158,18 @@
 				<reportElement positionType="FixRelativeToBottom" x="136" y="193" width="417" height="1" uuid="524b186f-3dd4-475a-b300-c49c273995ab"/>
 			</line>
 			<textField>
-				<reportElement x="168" y="44" width="100" height="20" forecolor="#0000FF" uuid="ed14dbc1-10a9-4ac2-baf4-96f535c13a03"/>
-				<textElement>
-					<font size="12"/>
-				</textElement>
-				<textFieldExpression><![CDATA["S/."+$F{totMontoBruto}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="168" y="13" width="100" height="20" forecolor="#0000FF" uuid="ccc2debf-bac9-4e72-95b2-a84550533393"/>
+				<reportElement x="168" y="13" width="100" height="20" uuid="38cd8933-675e-4f0b-a247-1edf3507f0ff"/>
 				<textElement>
 					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{totIngresos}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="168" y="44" width="100" height="20" uuid="d13477dc-bd16-40fd-8da8-41e1521e1182"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{totMontoBruto}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
